@@ -30,6 +30,9 @@ CT-REPO/CT-SSH:
 - cleanup: personnal info (sshe) => ssh_forward
 - ct-repo/ct-ssh : use dialog/gdialog? (one lib exists, find it, use it (ssft))
 
+CT-SET-BG:
+- support wmsetbg, feh, hsetroot, chbg or xsri
+
 MINE:
 - screen at shell startup
 - ecb/cedet/ilisp/doxyemacs
@@ -50,6 +53,19 @@ CTAFCONF:
 - define default program: navigateur/mail reader/term/pager/.../EDITOR/..
 - specify interface in argument to ct-profile, ct-installconf, ...
 - add help for ct-profile, ct-installconf (for interface)
+- ct-profile edit *.ctprofile , each .ctprofile describe :
+  - variable
+  - the output file
+  - the output method (sh, emacs, csh, ..)
+- ct-profile arg:
+  - askall
+  - test if var are def
+var_type (yesno, singlechoice, multichoice, text)
+var_separator #defined by the type
+var_value (value separate by separator)
+var_description
+var_file (needed?)
+var_type (emacs,csh,sh)
 
 SHELL:
 - screen : fichier de conf std (3 windows), automatiquement lance?, keys to browse history and to change term
@@ -62,6 +78,7 @@ SHELL:
 - works on solaris 9
 - path on tcsh (see .login)
 - path only when necessary
+- var => dangerous host (gate, ...)
 
 EMACS: ## SEE .ctafconf/etc/emacs/startup.emacs ##
 
@@ -124,3 +141,4 @@ BONUS:
   copie gconf.dump file somewhere at install and test with current
 - ramdom wallpaper (wallpp = ramdom, ramdomperso)
 - noneed: makefile (download ecb, ilisp, ..)?, ct-update (update ctafconf from sf svn)
+- DONT LOAD FUD on gate.epita.fr
