@@ -5,11 +5,11 @@
 ## Login   <ctaf@epita.fr>
 ##
 ## Started on  Fri Sep 30 22:08:35 2005 GESTES Cedric
-## Last update Fri Mar 31 19:36:48 2006 GESTES Cedric
+## Last update Fri May  5 17:25:38 2006 GESTES Cedric
 ##
 #!/bin/sh
 
-if [[ $- != *i* ]]; then
+if [[ $- != *i* ]] || [ a$HOST = agate-ssh ]; then
 	# Shell is non-interactive.  Be done now
 	return
 fi
